<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_normal"
        android:paddingEnd="@dimen/padding_normal"
        android:paddingBottom="@dimen/padding_large">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/title_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="@dimen/title_guideline_percentage"
            android:orientation="horizontal"/>

        <TextView
            android:id="@+id/home_title"
            style="@style/TextStylePrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_huge"
            android:text="@string/home_title"
            android:textAlignment="textStart"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@id/space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/title_guideline" />

        <Space
            android:id="@+id/space"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/button_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_title" />

        <LinearLayout
            android:id="@+id/button_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical"
            android:minWidth="@dimen/home_button_width"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space">

            <TextView
                android:id="@+id/rebuffer_to_live"
                style="@style/HomeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rebuffer_to_live" />

            <TextView
                android:id="@+id/catch_up_to_live"
                style="@style/HomeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/catch_up_to_live" />

            <TextView
                android:id="@+id/pre_caching"
                style="@style/HomeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/pre_caching" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
